--- a/app/views/static_pages/blog.html.erb
+++ b/app/views/static_pages/blog.html.erb
@@ -1,2 +1,6 @@
-<h1>StaticPages#blog</h1>
-<p>Find me in app/views/static_pages/blog.html.erb</p>
+<% provide(:title, 'Blog') %>
+<h1>Blog</h1>
+<p>
+  There are currently no recent blog pages available.
+  Start a new one! (no link for this!)
+</p>
