--- a/app/views/static_pages/faq.html.erb
+++ b/app/views/static_pages/faq.html.erb
@@ -1,2 +1,7 @@
-<h1>StaticPages#faq</h1>
-<p>Find me in app/views/static_pages/faq.html.erb</p>
+<% provide(:title, 'FAQ') %>
+<h1>FAQ</h1>
+<p>
+  Frequently Asked Questions:
+  Q: What is the meaning of this project?
+  A: Well, I don't know!
+</p>
